--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -61,6 +61,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_zt"
@@ -108,6 +109,7 @@
                     android:textSize="12sp" />
 
                 <TextView
+                    android:id="@+id/tv_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_name"
@@ -167,6 +169,7 @@
                 android:padding="10dp">
 
                 <TextView
+                    android:id="@+id/tv_order_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_10"
@@ -175,6 +178,7 @@
                     android:textSize="@dimen/sp_14" />
 
                 <TextView
+                    android:id="@+id/tv_order_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_10"
@@ -183,6 +187,7 @@
                     android:textSize="@dimen/sp_14" />
 
                 <TextView
+                    android:id="@+id/tv_order_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_10"
@@ -191,6 +196,7 @@
                     android:textSize="@dimen/sp_14" />
 
                 <TextView
+                    android:id="@+id/tv_order_4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_10"
@@ -199,6 +205,7 @@
                     android:textSize="@dimen/sp_14" />
 
                 <TextView
+                    android:id="@+id/tv_order_5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_10"
@@ -226,6 +233,7 @@
                 android:padding="@dimen/dp_10">
 
                 <TextView
+                    android:id="@+id/bnt0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/dp_10"
@@ -237,6 +245,19 @@
                     android:textSize="14sp" />
 
                 <TextView
+                    android:id="@+id/bnt1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/dp_10"
+                    android:background="@drawable/bj_circle_f2_5"
+                    android:paddingHorizontal="@dimen/common_margin_26"
+                    android:paddingVertical="@dimen/common_margin_8"
+                    android:text="查看物流"
+                    android:textColor="@color/color_000000"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/bnt2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bj_circle_theme_5"
