--- a/app/src/main/res/layout/activity_link2.xml
+++ b/app/src/main/res/layout/activity_link2.xml
@@ -178,13 +178,55 @@
         </LinearLayout>
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="A6-->>"
+            android:textColor="#000000" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <Button
+                android:id="@+id/send_btn60"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:text="+" />
+
+            <Button
+                android:id="@+id/send_btn61"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1.0"
+                android:text="-" />
+            <Button
+                android:id="@+id/send_btn62"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1.0"
+                android:text="28" />
+
+        </LinearLayout>
+
+
+        <TextView
             android:id="@+id/show_msg_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text=""
-            android:textSize="10pt" />
+            android:text="123456"
+            android:textSize="10sp" />
 
     </LinearLayout>
 
