--- a/app/src/main/res/layout/activity_task_start.xml
+++ b/app/src/main/res/layout/activity_task_start.xml
@@ -41,6 +41,7 @@
             android:src="@drawable/icon_jiantou_you_00" />
 
         <TextView
+            android:id="@+id/tv_lianjie"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_1"
