--- a/app/src/main/res/layout/fragment_home_two.xml
+++ b/app/src/main/res/layout/fragment_home_two.xml
@@ -71,9 +71,11 @@
                     android:id="@+id/tv_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="0dp"
                     android:text="设备管理"
                     android:textColor="@color/color_333333"
-                    android:textSize="@dimen/dimen_20dp"
+                    android:textSize="@dimen/dimen_18dp"
                     android:textStyle="bold" />
 
                 <ImageView
@@ -83,17 +85,17 @@
                     android:layout_alignBottom="@id/tv_1"
                     android:layout_marginStart="@dimen/dp_10"
                     android:layout_toRightOf="@id/tv_1"
-                    android:background="@drawable/bj_shape_line_66_6"
                     android:padding="@dimen/dimen_5dp"
                     android:scaleType="center"
                     android:src="@drawable/icon_jiantou_you_00" />
 
                 <TextView
+                    android:id="@+id/tv_lianjie"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_1"
                     android:layout_marginTop="@dimen/dp_10"
-                    android:text="智能椭圆机——已连接"
+                    android:text="运动设备未连接"
                     android:textColor="@color/color_999999"
                     android:textSize="@dimen/sp_14" />
 
