--- a/app/src/main/res/layout/item_rate_pattern.xml
+++ b/app/src/main/res/layout/item_rate_pattern.xml
@@ -26,13 +26,14 @@
         android:textSize="17sp" />
 
     <TextView
+        android:id="@+id/tv_v"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_name"
         android:layout_marginStart="@dimen/dp_10"
         android:layout_marginTop="@dimen/dimen_5dp"
         android:layout_toEndOf="@id/iv_icon"
-        android:text="140cal"
+        android:text="0"
         android:textColor="#212121"
         android:textSize="20sp"
         android:textStyle="bold" />
