--- a/app/src/main/res/drawable/progress_bar_vertical.xml
+++ b/app/src/main/res/drawable/progress_bar_vertical.xml
@@ -1,29 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@android:id/background">
-        <shape>
-            <corners android:radius="10dip" />
-            <gradient
-                android:centerColor="@color/transparent"
-                android:endColor="@color/transparent"
-                android:startColor="@color/transparent" />
-        </shape>
+    <!--pb背景样式-->
+    <item
+        android:id="@android:id/background"
+        android:drawable="@drawable/progress_bar_bg_y" />
+    <!--pb进度条样式-->
+    <item android:id="@android:id/progress">
+        <scale
+            android:drawable="@drawable/progress_bar_bj_jb"
+            android:scaleWidth="100%" />
     </item>
-    <item android:id="@android:id/secondaryProgress">
-        <clip
-            android:clipOrientation="vertical"
-
-            android:gravity="bottom">
-            <shape>
-                <corners android:radius="50dp" />
-
-                <gradient
-                    android:angle="90"
-                    android:endColor="#98FF86"
-                    android:startColor="#EEFFEB" />
-            </shape>
-        </clip>
-    </item>
-
 
 </layer-list>
